--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
     <% @posts.each do |post| %>
     <div class="col-xs-12">
       <div class="text-center">
-        <h2><%= @article.title %></h2>
+        <h2><%= post.title %></h2>
         <h6><%= post.created_at.strftime('%b %d, %Y') %></h6>
       </div>
 
